src/tests/Intermediate/ShouldFail/rec_nofunc.ml
let rec x = x in prInt 0
